<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.school_bus_tracker_app.MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/school_bus"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/welcome"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/school_bus" />
    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/school_bus"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_text"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:layout_marginStart="50dp">
        <TextView
            android:id="@+id/start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_a"
            android:textSize="15sp"
            android:textColor="#000"

            />
        <RadioButton
            android:id="@+id/driver_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/driver" />
        <RadioButton
            android:id="@+id/parent_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent" />
        <RadioButton
            android:id="@+id/student_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student" />
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:autofillHints="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/age"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:autofillHints="@string/age" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_telephone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/user_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telephone_number"
            android:drawableStart="@drawable/user"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:autofillHints="@string/telephone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/user_telephone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"

            android:drawableStart="@drawable/lock"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="8dp"
            android:autofillHints="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signup_button"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_button">
    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/already_have_on_account_log_in"
        />
    <TextView
        android:id="@+id/login_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/log_in_text"
        android:textAllCaps="false"
        android:textColor="#6C63FF"
        />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
</layout>