<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/user_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/user_profile"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/user_profile" />
        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="30sp"
            android:textStyle="normal"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/notification"
            app:layout_constraintStart_toEndOf="@id/user_profile"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageButton
            android:id="@+id/notification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:src="@drawable/notification_icon"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/notification" />

        <Button
            android:id="@+id/create_service"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_corner"
            android:text="@string/create_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home"
            />
        <Button
            android:id="@+id/my_services"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner"
            android:text="@string/my_services"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_service"
            />
        <Button
            android:id="@+id/exit"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner"
            android:text="@string/exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_services"
            android:shadowColor="@android:color/background_dark"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>