<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageButton
            android:id="@+id/user_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:src="@drawable/user_profile"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/user_profile" />
        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="30sp"
            android:textStyle="normal"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/notification"
            app:layout_constraintStart_toEndOf="@id/user_profile"
            app:layout_constraintTop_toTopOf="parent"
            />
        <ImageButton
            android:id="@+id/notification"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:src="@drawable/notification_icon"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/notification" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_child"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:background="@drawable/round_corner"
            android:layout_gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification"
            tools:ignore="RtlHardcoded" />
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>